--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
 html,
 body {
   padding: 0;
-  margin: 0;
+  margin: 10vw;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    min-height: 200vh;
 }
+
 
 a {
   color: inherit;
@@ -13,14 +15,4 @@ a {
 
 * {
   box-sizing: border-box;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
 }
